# oztech

./: .gitignore  pyproject.toml  requirements.txt  serviceAccountKey.json  test.py
api/: urls.py
config/: settings.py  urls.py
courses/: admin.py  models.py  serializers.py  urls.py  views.py
courses/migrations/: 0008_alter_course_students.py  0009_alter_module_finishers.py  0010_alter_lesson_finishers_alter_module_students.py  0011_remove_lesson_resource_remove_lesson_video_resource_and_more.py  0012_resource_name_video_name.py  0013_test_alter_resource_options_alter_video_options_and_more.py  0014_remove_lesson_test_test_lesson.py  0015_course_is_public.py  0016_lesson_is_public.py  0017_banner_notification.py  0018_notification_created.py  0019_rename_user_courserating_author_and_more.py
templates/: index.html
users/: admin.py  manager.py  models.py  serializers.py  urls.py  views.py
users/migrations/: 0007_rename_city_user_full_name_remove_user_middle_name_and_more.py  0008_remove_user_profession.py  0009_alter_user_is_active.py  0010_delete_verificationcode.py  0011_alter_user_full_name_alter_user_image_and_more.py  0012_user_fcm_token.py  0013_alter_user_fcm_token.py  0014_rename_username_user_phone.py
utils/: mail.py  notify.py  worker.py
